# pysoundmonitor

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: format.md
scripts/: fetch_tunes.py
src/pysoundmonitor/: __init__.py  constants.py  errors.py  model.py  player.py  reader.py  sidparser.py
tests/: conftest.py  helpers.py  test_corpus.py  test_model.py  test_oracle_hvsc.py  test_player.py  test_reader.py  test_real_tune.py  test_sidparser.py
