[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysoundmonitor"
version = "0.2.0"
description = "Pure-Python reader and detector for Soundmonitor (64'er / Hulsbeck) SID tunes"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Josh Bailey" }]
keywords = ["sid", "c64", "soundmonitor", "hulsbeck", "tracker", "chiptune"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "pysidtracker>=0.5",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "py65>=1.1",
    "pylint>=3",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",
]

[project.urls]
Homepage = "https://github.com/anarkiwi/pysoundmonitor"
Source = "https://github.com/anarkiwi/pysoundmonitor"
Issues = "https://github.com/anarkiwi/pysoundmonitor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -n auto"

[tool.coverage.run]
branch = true
source = ["pysoundmonitor"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pylint.main]
disable = "all"
enable = [
    "redefined-builtin",
    "unused-import",
    "unused-argument",
    "cell-var-from-loop",
    "unused-variable",
    "unbalanced-tuple-unpacking",
    "stop-iteration-return",
    "reimported",
    "dangerous-default-value",
    "pointless-statement",
    "using-constant-test",
    "raise-missing-from",
]
